<?xml version="1.0"?>
<package format="3">
  <name>track_ped_msgs</name>
  <version>0.0.0</version>
  <description>Package defining the message formats for TrackedPersons and TrackedPerson</description>
  <maintainer email="anhoangle296@gmail.com">anlh</maintainer>
  <license>MIT</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and execution dependencies for messages -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Optional test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Specifies the build type -->
    <build_type>ament_cmake</build_type>
    <!-- Include this package as a member of the ROS interface group -->
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
